--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ ash = { version = "0.38.0", features = ["linked"] }
 ash-window = "0.13.0"
 image = "0.25.2"
 nalgebra-glm = "0.19.0"
+simple-error = "0.3.1"
 spirv-reflect = "0.2.3"
+tobj = "4.0.2"
 winit = "0.30.5"
 
 [build-dependencies]
